fix user checkbox spacing

--- a/src/components/User/styles.scss
+++ b/src/components/User/styles.scss
@@ -20,8 +20,8 @@
 
   &__checkbox {
     position: absolute;
-    left: 0px;
-    top: 0px;
+    left: 8px;
+    top: 8px;
 
     @media screen and(min-width: 900px) {
       position: initial;
